<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Twitter</string>
    <string name="tweet_body">This is the tweet body.</string>
    <string name="screen_name">\@user</string>
    <string name="time_delta">Time since Tweet</string>
    <string name="title_activity_create_tweet">CreateTweetActivity</string>
    <string name="tweet">Tweet</string>
    <string name="refresh">Refresh</string>
    <string name="char_count">"Character Count: "</string>
    <string name="char_remaining">"Characters Remaining: "</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="tagline">This is the tagline!</string>
    <string name="following">Following:</string>
    <string name="followers">Followers:</string>

</resources>