<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.basictwitter.ProfileActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
        
        <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_profile" />
        
        <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivProfile"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/tagline" />
        
        
        <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivProfile"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTagline" > 
 
        <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/following" />
 
        <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvFollowing"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/followers" />
            
        </RelativeLayout>
        
    </RelativeLayout>
  
     <FrameLayout
       android:id="@+id/ctUserTimelineFragment"
       android:layout_below="@+id/relativeLayout1"
       android:layout_alignParentLeft="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       tools:layout="@layout/fragment_tweets_list">
  	</FrameLayout>

</RelativeLayout>