<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/btUser"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onUserProfile"
        android:background="@android:color/transparent"
        android:text="" />
    

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_marginLeft="8dp"
        android:paddingBottom="1dp"
        android:textStyle="bold"
        android:text="@string/screen_name" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvScreenName"
        android:layout_below="@+id/tvScreenName"
        android:paddingBottom="1dp"
        android:text="@string/tweet_body" />

    <TextView
        android:id="@+id/tvTimeDelta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#b1bbbbbb"
        android:textSize="6pt"
        android:text="@string/time_delta" />



</RelativeLayout>
